@@ -1258,6 +1258,7 @@ AC_OUTPUT(Makefile
 	utils/zmailer.init.sh		utils/autoanswer.pl		\
 	utils/vacation/Makefile		man/vacation.1			\
 	utils/vacation/vacation.sh	utils/makedb/Makefile		\
+	utils/rotate-logs.sh						\
 	proto/Makefile			proto/zmailer.sh		\
 	proto/newaliases		proto/newfqdnaliases		\
 	proto/newdb			proto/scheduler.conf		\
